--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -27,3 +27,14 @@ body {
   background: image_url('greywall.png');
   box-shadow: 0px 2px 3px #2a2a2a;
 }
+
+
+.navbar-inverse .navbar-brand {
+  color: white;
+  font-family: 'ubuntuitalic', sans-serif;
+  font-size: 26px;
+  font-style: italic;
+
+}
+
+
