--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,6 +1,6 @@
-<h1> Welcome to my Awesome Web App</h1>
+<h1> Welcome to the worlds leading Yelp knockoff site</h1>
 
-<%= will_paginate @places, previous_label: h("<"), next_label: h(">") %>
+
 
 <% @places.each do |place| %>
   <div class=booyah-box col-10 offset-1>
@@ -18,3 +18,4 @@
 <% end %>
 
 
+<%= will_paginate @places, previous_label: h("<"), next_label: h(">") %>
