--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,5 +1,7 @@
 
 
+
+
 <div class="booyah-box col-10 offset-1">
   <h1><%= @place.name %></h1>
   <i><%= @place.address %></i>
@@ -8,11 +10,15 @@
 
 
   <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
     #map {
       height: 300px;
     }
   </style>
-
 <% if @place.latitude.present? && @place.longitude.present? %>
   <script>
 
@@ -48,4 +54,5 @@
     <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
   <% end %>
   </div>
+<br>
 </div>
