--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -8,7 +8,7 @@
   <br/><br/>
   <p><%= @place.description %></p>
   <% @place.photos.each do |photo| %>
-    <%= photo.caption %>
+    <li><%= photo.caption %></li>
   <% end %>
 
 
