--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -8,10 +8,12 @@
   <br/><br/>
   <p><%= @place.description %></p>
   <% @place.photos.each do |photo| %>
-    <small><%= photo.caption %></small>
+    <%= image_tag photo.picture.url.to_s %>
+    <%= photo.caption %>
   <% end %>
 
-
+<br />
+<br /> 
   <style>
     html, body {
       height: 100%;
@@ -76,6 +78,7 @@
       </div>
       <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
         <div class="modal-body">
+            <%= f.input :picture %>
             <%= f.input :caption %>
         </div>
         <div class="modal-footer">
