--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,6 +7,7 @@
     <h1><%= link_to place.name, place_path(place) %></h1><br />
     <i><%= place.address %></i><br /><br />
     <p><%= place.description %></p><br />
+       <%= image_tag place.photos.last.picture.to_s %>
 
     <% if place.user.present? %>
       <small><%= place.user.email %></small>
@@ -23,14 +24,12 @@
     </div>
   <% end %>
 
-
-    <%= image_tag @photo.picture.url.to_s %>
   
   </div>
 
 
-
 <% end %>
+
 
 
 <%= will_paginate @places, previous_label: h("<"), next_label: h(">") %>
