--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -6,11 +6,14 @@
   <h1><%= @place.name %></h1>
   <i><%= @place.address %></i>
   <br/><br/>
-  <p><%= @place.description %></p>
-    <% @place.photos.each do |photo| %>
-    <%= image_tag photo.picture.to_s %>
-    <%= photo.caption %>
-  <% end %>
+    <p><%= @place.description %></p>   
+      <% @place.photos.each do |photo| %>
+      <% if photo.picture.present? %>
+      <%= image_tag photo.picture.to_s, size: "60x60" %>
+      <% end %>
+      <%= photo.caption %>
+    <% end %>
+ 
 
 <br />
 <br /> 
@@ -56,8 +59,13 @@
 
   <div class="float-right">
   <% if current_user && current_user == @place.user %>
+    <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary btn-md " data-toggle="modal" data-target="#myPhoto">
+    Add a Photo
+  </button>
     <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
     <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
+
   <% end %>
   </div>
 <br>
@@ -65,10 +73,8 @@
 
 
 <div class="col-10 offset-1">
-  <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary btn-sm float-right" data-toggle="modal" data-target="#myPhoto">
-    Add a Photo!
-  </button>
+
+
 </div>
 
 </div>
