--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -26,6 +26,7 @@ body {
 .navbar {
   background: image_url('greywall.png');
   box-shadow: 0px 2px 3px #2a2a2a;
+  margin-bottom: 0;
 }
 
 
@@ -33,6 +34,7 @@ body {
   color: white;
   font-family: 'ubuntuitalic', sans-serif;
   font-size: 26px;
+  margin-bottom: 0;
 
 }
 
@@ -81,4 +83,34 @@ blockquote p {
 
 button {
   font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
+
+.carousel-item.active, 
+.carousel-item-next, 
+.carousel-item-prev {
+  display: block;
+}
+
+
+.carousel-inner > .carousel-item > img, .carousel-inner > carousel-item > a > img {
+  max-height: 550px;
+  width: 100%;
+}
+
+.carousel-caption {
+  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 60px;
+  font-weight: 100;
+  text-shadow: rgba(0, 0, 0, 0.95) 2px 2px;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  position: absolute;
+  left: 0;
+}
+
+
+.carousel {
+  box-shadow: 0px 3px 8px #2a2a2a;
 }
